--- a/config/database.yml
+++ b/config/database.yml
@@ -81,6 +81,6 @@ production:
   <<: *default
   name: one_lab
   user: Danicex
-  database: server_production
+  database: onelab
   username: Danicex
   password: <%= ENV["SERVER_DATABASE_PASSWORD"] %>
